--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta name="description" content>
-        <meta property="og:title" content="IndiConnect-Branchless Banking">
+        <meta property="og:title" content="SpherePay Banking">
         <meta property="og:description" content="Seamless Transactions, Empowering Business and Personal Finance">
         <meta property="og:image" content="assets/newLogoResize.png">
         <meta property="og:url" content="">
