--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -788,7 +788,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -800,7 +800,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -957,7 +957,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -982,7 +982,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1007,7 +1007,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/terms-condition.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1019,7 +1019,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1344,9 +1344,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1374,9 +1374,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
