--- a/tax-payments.html
+++ b/tax-payments.html
@@ -1500,9 +1500,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
