--- a/contact-us.html
+++ b/contact-us.html
@@ -978,7 +978,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1003,7 +1003,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1028,7 +1028,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/terms-condition.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1040,7 +1040,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1121,9 +1121,9 @@
                         <div _ngcontent-ng-c247682044 class="col-12 p-lg-4 p-3 text-center">
                             <h2 _ngcontent-ng-c247682044 class="fw-700 mb-0 text-primary display-5">Get in touch</h2>
                         </div>
-                        <div _ngcontent-ng-c247682044 class="row pb-lg-4 pb-3">
+                        <div _ngcontent-ng-c247682044 class="row pb-lg-4 pb-2">
                             <div _ngcontent-ng-c247682044 class="col-lg-4 col-12 justify-content-center d-flex d-lg-block">
-                                <div _ngcontent-ng-c247682044 class="card main-card">
+                                <!-- <div _ngcontent-ng-c247682044 class="card main-card">
                                     <div _ngcontent-ng-c247682044 class="card-body py-4 mx-1 text-center">
                                         <img _ngcontent-ng-c247682044 loading="lazy" alt="Call Us" src="/assets/images/contact-us-image/call_img.svg" class="img-fluid">
                                         <h3 _ngcontent-ng-c247682044 class="fw-700 mt-4">Give us a call</h3>
@@ -1132,7 +1132,7 @@
                                         <a _ngcontent-ng-c247682044 href="tel:+919201010130" class="fw-400 fs-16 text-secondary">+91 9201010130</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div _ngcontent-ng-c247682044 class="col-lg-4 col-12 justify-content-center d-flex d-lg-block">
                                 <div _ngcontent-ng-c247682044 class="card main-card">
                                     <div _ngcontent-ng-c247682044 class="card-body py-4 mx-1 text-center">
@@ -1227,9 +1227,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1245,21 +1245,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
-                                                </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                </a> -->
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
@@ -1285,14 +1285,14 @@
                                       <img _ngcontent-ng-c3174313655 loading="lazy" alt="Youtube Icon" src="/assets/images/footer-image/youtub.svg" class="mr-3 cursor-pointer">
                                   </a>
                               </div>
-                          </div> -->
+                          </div>
                           <div _ngcontent-ng-c3174313655 class="col-lg-5"></div>
                           <div _ngcontent-ng-c3174313655 class="col-lg-4 col-md-6 col-12 mt-2 mt-md-5 justify-content-lg-end justify-content-center d-flex">
                               <img _ngcontent-ng-c3174313655 loading="lazy" alt="SSL Secured Logo" src="/assets/images/footer-image/footerlogossl.svg" class="footer-logo img-fluid">
                               <img _ngcontent-ng-c3174313655 loading="lazy" alt="PCI Logo" src="/assets/images/footer-image/footerlogodds.svg" class="footer-logo img-fluid ml-4">
                           </div>
                       </div>
-                        <!---->
+                        
                         <!---->
                         <div _ngcontent-ng-c3174313655 class="row pt-3 pb-4 px-lg-5 mx-lg-5 px-md-3 mx-md-3 px-2 mx-2 justify-content-center">
                             <p _ngcontent-ng-c3174313655 class="copyright clearfix text-white m-0 fw-500 d-lg-flex fs-16">
