--- a/home.html
+++ b/home.html
@@ -1291,7 +1291,7 @@
                                                                     <img _ngcontent-ng-c4214895665 loading="lazy" alt="Navbar Icon" src="assets/images/header-image/instant-settlement_pg.svg">
                                                                 </div>
                                                                 <div _ngcontent-ng-c4214895665 class="col-10 col-md-10">
-                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">privacy Policy</h4>
+                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">Privacy Policy</h4>
                                                                     <p _ngcontent-ng-c4214895665 class="p-header">Accept payments on Website or APP</p>
                                                                 </div>
                                                             </div>
