--- a/current-account.html
+++ b/current-account.html
@@ -7,10 +7,10 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta name="description" content>
-        <meta property="og:title" content="IndiConnect-Branchless Banking">
+        <meta property="og:title" content="SpherePay Banking">
         <meta property="og:description" content="Seamless Transactions, Empowering Business and Personal Finance">
         <meta property="og:image" content="assets/newLogoResize.png">
-        <meta property="og:url" content="https://indiconnect.in">
+        <meta property="og:url" content="https://spherepay.in">
         <link rel="icon" type="image/x-icon" href="assets/icon/fevicon.png">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
