--- a/multibank-account.html
+++ b/multibank-account.html
@@ -7,10 +7,10 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta name="description" content>
-        <meta property="og:title" content="IndiConnect-Branchless Banking">
+        <meta property="og:title" content="SpherePay Banking">
         <meta property="og:description" content="Seamless Transactions, Empowering Business and Personal Finance">
         <meta property="og:image" content="assets/newLogoResize.png">
-        <meta property="og:url" content="https://indiconnect.in">
+        <meta property="og:url" content="https://spherepay.in">
         <link rel="icon" type="image/x-icon" href="assets/icon/fevicon.png">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -1230,7 +1230,7 @@
                             <h2 _ngcontent-ng-c978942507 class="fw-700">
                                 Get started with <span _ngcontent-ng-c978942507 class="text-primary">SpherePay</span>
                             </h2>
-                            <p _ngcontent-ng-c978942507 class="text-muted fw-500 fs-16 mb-0">Say goodbye to juggling between different apps and platforms-SpherePay streamlines your experience by presenting a clear, unified dashboard that allows you to monitor balances, track transactions, and manage payments effortlessly. Simplify your financial management and enjoy full control over your accounts with Indiconnect’s innovative solution!</p>
+                            <p _ngcontent-ng-c978942507 class="text-muted fw-500 fs-16 mb-0">Say goodbye to juggling between different apps and platforms-SpherePay streamlines your experience by presenting a clear, unified dashboard that allows you to monitor balances, track transactions, and manage payments effortlessly. Simplify your financial management and enjoy full control over your accounts with Spherepay's innovative solution!</p>
                             <div _ngcontent-ng-c978942507 class="pt-4">
                                 <a _ngcontent-ng-c978942507 href="/contact-us.html">
                                     <button _ngcontent-ng-c978942507 class="btn btn-primary p-2 py-2 px-4 fw-600 fs-16">Contact Us</button>
