--- a/recurring-upi.html
+++ b/recurring-upi.html
@@ -7,10 +7,10 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <meta name="description" content>
-        <meta property="og:title" content="IndiConnect-Branchless Banking">
+        <meta property="og:title" content="SpherePay Banking">
         <meta property="og:description" content="Seamless Transactions, Empowering Business and Personal Finance">
         <meta property="og:image" content="assets/newLogoResize.png">
-        <meta property="og:url" content="https://indiconnect.in">
+        <meta property="og:url" content="https://spherepay.in">
         <link rel="icon" type="image/x-icon" href="assets/icon/fevicon.png">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -1160,7 +1160,7 @@
                                 </div>
                                 <div _ngcontent-ng-c3256068279 class="col-12 col-md-5 mt-2 mt-md-4">
                                     <h5 _ngcontent-ng-c3256068279 class="fw-600 lh-lg mb-0">Seamless Payment Processing</h5>
-                                    <p _ngcontent-ng-c3256068279 class="text-muted fs-14 fw-500">Ensure your customers' payments are processed smoothly and without delays with indiconnect's UPI AutoPay. </p>
+                                    <p _ngcontent-ng-c3256068279 class="text-muted fs-14 fw-500">Ensure your customers' payments are processed smoothly and without delays with SpherePay's UPI AutoPay. </p>
                                 </div>
                                 <div _ngcontent-ng-c3256068279 class="col-12 col-md-5 mt-2 mt-md-4">
                                     <h5 _ngcontent-ng-c3256068279 class="fw-600 lh-lg mb-0">Send Pre-debit Notification</h5>
